--- a/solarsystem/build.gradle
+++ b/solarsystem/build.gradle
@@ -19,10 +19,11 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenLocal()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
-        classpath 'com.google.ar.sceneform:plugin:1.0.0'
+        classpath 'com.google.ar.sceneform:plugin:1.0.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
