--- a/samples/solarsystem/app/build.gradle
+++ b/samples/solarsystem/app/build.gradle
@@ -19,21 +19,14 @@ android {
     defaultConfig {
         applicationId "com.google.ar.sceneform.samples.solarsystem"
 
-        // 24 is the minimum since ARCore only works with 24 and higher.
+        // Sceneform requires minSdkVersion >= 24.
         minSdkVersion 24
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
-        ndk {
-            /*
-             * Sceneform is available for the following ABIs: arm64-v8a, armeabi-v7a,
-             * x86_64 and x86. This sample app enables arm64-v8a to run on
-             * devices and x86 to run on the emulator. Your application should
-             * list the ABIs most appropriate to minimize APK size (arm64-v8a recommended).
-             */
-            abiFilters 'arm64-v8a','x86'
-        }
     }
+    // Sceneform libraries use language constructs from Java 8.
+    // Add these compile options if targeting minSdkVersion < 26.
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -51,7 +44,7 @@ android {
 }
 
 dependencies {
-  implementation "com.google.ar.sceneform:core:1.5.1"
+  implementation "com.google.ar.sceneform:core:1.6.0"
   implementation "com.android.support:appcompat-v7:27.1.1"
   implementation "com.android.support:design:27.1.1"
 }
