--- a/sceneformux/ux/build.gradle
+++ b/sceneformux/ux/build.gradle
@@ -15,11 +15,11 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         // Sceneform requires minSdkVersion >= 24.
         minSdkVersion 24
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -39,9 +39,9 @@ android {
 }
 
 dependencies {
-    api "com.google.ar.sceneform:core:1.6.0"
-    implementation "com.android.support:appcompat-v7:27.1.1"
-    implementation "com.android.support:design:27.1.1"
+    api "com.google.ar.sceneform:core:1.7.0"
+    implementation "com.android.support:appcompat-v7:28.0.0"
+    implementation "com.android.support:design:28.0.0"
 }
 
 task compileUxAssets {
@@ -55,6 +55,16 @@ sceneform.asset('sampledata/sceneform_footprint.obj',
         'default',
         'sampledata/sceneform_footprint.sfa',
         'src/main/res/raw/sceneform_footprint')
+
+sceneform.asset('sampledata/sceneform_face_mesh.obj',
+        'sampledata/sceneform_face_mesh_material.mat',
+        'sampledata/sceneform_face_mesh.sfa',
+        'src/main/res/raw/sceneform_face_mesh')
+
+sceneform.asset('sampledata/sceneform_face_mesh_occluder.obj',
+        'sampledata/sceneform_face_mesh_occluder_material.mat',
+        'sampledata/sceneform_face_mesh_occluder.sfa',
+        'src/main/res/raw/sceneform_face_mesh_occluder')
 
 // This ensures that sceneform assets are compiled at the right point
 // of the build process, which is necessary when using sceneform
