--- a/sceneformux/ux/build.gradle
+++ b/sceneformux/ux/build.gradle
@@ -13,6 +13,9 @@
  * limitations under the License.
  */
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
+group='com.augment'
+version='1.11.0-beta1'
 
 android {
     compileSdkVersion 28
@@ -21,7 +24,7 @@ android {
         minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
-        versionName "1.0"
+        versionName version
     }
     compileOptions {
         // Sceneform libraries use language constructs from Java 8.
@@ -35,13 +38,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
 }
 
 dependencies {
     api "com.google.ar.sceneform:core:1.11.0"
-    implementation "com.android.support:appcompat-v7:28.0.0"
-    implementation "com.android.support:design:28.0.0"
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'com.google.android.material:material:1.0.0'
 }
 
 task compileUxAssets {
