--- a/samples/videorecording/app/src/main/AndroidManifest.xml
+++ b/samples/videorecording/app/src/main/AndroidManifest.xml
@@ -16,14 +16,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.google.ar.sceneform.samples.videorecording">
-  <!-- Always needed for AR. -->
+    <!-- "AR Required" apps must declare minSdkVersion ≥ 24.
+         "AR Optional" apps must declare minSdkVersion ≥ 14 -->
+    <!-- Sceneform requires OpenGLES 3.0 or later. -->
+    <uses-feature android:glEsVersion="0x00030000" android:required="true" />
+    <!-- Always needed for AR. -->
 
     <uses-permission android:name="android.permission.CAMERA" />
     <!-- Write to external storage for saving video -->
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <!-- This tag indicates that this application requires ARCore. This results in the application
-        only being visible in the Google Play Store on devices that support ARCore. -->
+    <!-- Indicates that this app requires Google Play Services for AR ("AR Required") and results in
+         the app only being visible in the Google Play Store on devices that support ARCore.
+         For an "AR Optional" app, remove this tag. -->
     <uses-feature android:name="android.hardware.camera.ar" android:required="true"/>
 
     <application
@@ -33,9 +38,9 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="false"
         tools:ignore="GoogleAppIndexingWarning">
-        <!-- This tag indicates that this application requires ARCore. This results in the
-            application only being visible in the Google Play Store on devices that support
-            ARCore. -->
+        <!-- Indicates that this app requires Google Play Services for AR ("AR Required") and causes
+             the Google Play Store to download and intall Google Play Services for AR along with
+             the app. For an "AR Optional" app, specify "optional" instead of "required". -->
         <meta-data android:name="com.google.ar.core" android:value="required" />
 
         <activity
